--- a/templates/hello.html
+++ b/templates/hello.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    <img src="/static/image/hw.jpg" alt="">
+    <img src="/static/image/hello_world.png" alt="">
 </body>
 </html>
